package com.tienda.web.app.models.entity;

import java.util.Date;
import java.util.HashSet;
import java.util.Set;

import javax.persistence.CascadeType;
import javax.persistence.Column;
import javax.persistence.Entity;
import javax.persistence.GeneratedValue;
import javax.persistence.GenerationType;
import javax.persistence.Id;
import javax.persistence.JoinColumn;
import javax.persistence.JoinTable;
import javax.persistence.ManyToMany;
import javax.persistence.OneToMany;
import javax.persistence.OneToOne;
import javax.persistence.PrePersist;
import javax.persistence.Table;
import javax.persistence.Temporal;
import javax.persistence.TemporalType;

import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
import com.fasterxml.jackson.annotation.JsonManagedReference;


@Entity
@Table(name = "carritos")
public class Carrito {
	
	@Id
	@GeneratedValue(strategy = GenerationType.IDENTITY)
	private Long id;
	
	@Column(name = "create_at")
	@Temporal(TemporalType.TIMESTAMP)
	private Date creatAt;
	
	@OneToOne
	@JoinColumn(name = "usuario_id")
	@JsonIgnoreProperties("carrito")//Esta anotacion ayuda a evitar bucles infinitos con la inforamcion al convertirla a JSON
	private Usuario usuario;
	
	@ManyToMany
	@JoinTable(
			name = "carrito_producto",
			joinColumns = @JoinColumn(name = "carrito_id"),
			inverseJoinColumns = @JoinColumn(name = "producto_id"))
	private Set<Producto> productos = new HashSet<>();

	@OneToMany(mappedBy = "carrito", cascade = CascadeType.ALL, orphanRemoval = true)
	@JsonManagedReference
	private Set<ItemCarrito> items = new HashSet<>();
	
	@PrePersist
	public void prePersist() {
		this.creatAt = new Date();
	}
	
	//Metodo para calcular el total de los prodcutos del carrito
	public double total() {
		return items.stream().mapToDouble(item -> item.getProducto().getPrecio()* item.getCantidad()).sum();
	}
	
	public Long getId() {
		return id;
	}

	public void setId(Long id) {
		this.id = id;
	}

	public Date getCreatAt() {
		return creatAt;
	}

	public void setCreatAt(Date creatAt) {
		this.creatAt = creatAt;
	}

	public Usuario getUsuario() {
		return usuario;
	}

	public void setUsuario(Usuario usuario) {
		this.usuario = usuario;
	}

	public Set<Producto> getProductos() {
		return productos;
	}

	public void setProductos(Set<Producto> productos) {
		this.productos = productos;
	}

	public Set<ItemCarrito> getItems() {
		return items;
	}

	public void setItems(Set<ItemCarrito> items) {
		this.items = items;
	}
	
}
